welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: ';' expected but 'else' found.
		gauche() else droite()
                         ^